# AetherCraft

./: CMakeLists.txt  run.bat
src/: main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Engine/Clock/: Clock.cpp  Clock.hpp
src/Engine/Time/: Time.cpp  Time.hpp
src/Engine/Window/: Window.cpp  Window.hpp
src/Game/: Game.cpp  Game.hpp
